# NumberGuessing

./: .gitignore  CMakeLists.txt  NumberGuessing.vcxproj  README.md  build.bat
include/: Config.hpp  Game.hpp
src/: Game.cpp  main.cpp
x64/Debug/: NumberGuessing.exe.recipe
